--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -17,4 +17,4 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Run tests and Build
-      run: xcodebuild clean build test -workspace Workspace.xcworkspace -scheme "News" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 15 Pro,OS=17.5" ONLY_ACTIVE_ARCH=YES
+      run: xcodebuild clean build test -workspace Workspace.xcworkspace -scheme "News" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 15 Pro,OS=17.x" ONLY_ACTIVE_ARCH=YES
